--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -3,7 +3,9 @@ name: Deploy Python project to Azure Function App
 on:
   push:
     branches: ["main"]
-
+  pull_request:
+    types:
+      - closed
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       
   PYTHON_VERSION: '3.11'                     
@@ -62,9 +64,9 @@ jobs:
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'zoho-service' ##replace with your function name
+          app-name: 'zoho-ops-service' ##replace with your function name
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           scm-do-build-during-deployment: true
           enable-oryx-build: true
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FCCB9754D975453B906388F9C6A8FAC7 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CRM_TOOLS }}
